axum-macros/tests/debug_handler/fail/not_async.rs
use axum_macros::debug_handler;

#[debug_handler]
fn handler() {}

fn main() {}
